--- a/MakersMarktE5/Data/ExampleApp.config
+++ b/MakersMarktE5/Data/ExampleApp.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="BarrocIntens"
-			 connectionString="server=[localhost];user=[username];password=[password];database=BarrocIntens;" />
+		<add name="MakersMarkt"
+			 connectionString="server=[localhost];user=[username];password=[password];database=MakersMarkt;" />
 	</connectionStrings>
 </configuration>
