--- a/MakersMarktE5/MakersMarktE5.csproj
+++ b/MakersMarktE5/MakersMarktE5.csproj
@@ -14,6 +14,10 @@
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 	<ItemGroup>
+	  <Content Remove="Assets\giraff.jpg" />
+	  <Content Remove="Assets\Logo.png" />
+	</ItemGroup>
+	<ItemGroup>
 		<None Remove="Views\BuyerViews\BuyerWindow.xaml" />
 		<None Remove="Views\BuyerViews\ProductPage.xaml" />
 	</ItemGroup>
