--- a/MakersMarktE5/MakersMarktE5.csproj
+++ b/MakersMarktE5/MakersMarktE5.csproj
@@ -18,6 +18,7 @@
 		<None Remove="Views\BuyerViews\ProductPage.xaml" />
 		<None Remove="Views\ModeratorViews\ModeratorWindow.xaml" />
 		<None Remove="Views\ModeratorViews\ProductEditPage.xaml" />
+		<None Remove="Views\ModeratorViews\VerifyAccountProductPage.xaml" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -52,6 +53,11 @@
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
 		<PackageReference Include="System.Text.Json" Version="8.0.5" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Page Update="Views\ModeratorViews\VerifyAccountProductPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	</ItemGroup>
 	<ItemGroup>
 	  <Page Update="Views\ModeratorViews\ProductEditPage.xaml">
