--- a/MakersMarktE5/MakersMarktE5.csproj
+++ b/MakersMarktE5/MakersMarktE5.csproj
@@ -16,6 +16,7 @@
 	<ItemGroup>
 		<None Remove="Views\BuyerViews\BuyerWindow.xaml" />
 		<None Remove="Views\BuyerViews\ProductPage.xaml" />
+		<None Remove="Views\CreatorViews\CreatorWindow.xaml" />
 		<None Remove="Views\ModeratorViews\ModeratorWindow.xaml" />
 		<None Remove="Views\ModeratorViews\ProductEditPage.xaml" />
 		<None Remove="Views\ModeratorViews\VerifyAccountProductPage.xaml" />
@@ -53,6 +54,11 @@
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
 		<PackageReference Include="System.Text.Json" Version="8.0.5" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Page Update="Views\CreatorViews\CreatorWindow.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	</ItemGroup>
 	<ItemGroup>
 	  <Page Update="Views\ModeratorViews\VerifyAccountProductPage.xaml">
